--- a/LegitQuest/LegitQuest/AbilityDisplay.xaml
+++ b/LegitQuest/LegitQuest/AbilityDisplay.xaml
@@ -6,6 +6,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Button x:Name="Ability" Click="Ability_Click_1"></Button>
     </Grid>
 </UserControl>
